fix body align

--- a/css/modal.css
+++ b/css/modal.css
@@ -1,7 +1,7 @@
 body {
   background: rgba(0,0,0,.5);
   display: flex;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
 }
 #content {
